@@ -1,0 +1,6 @@
+dcdim <-
+function(x)
+{
+    class(x) <- c("dcdim", class(x))
+    x
+}
