@@ -2,6 +2,8 @@ dclone package versions
 
 Version 0.2-3, August 6, 2009
 
+    * dcdim and dclone.dcdim: functions to add
+      extra dimension for the data.
     * jags.dclone: initsfun argument added.
     * dcsd: for DC SE calculations.
     * ladderplot: simple plotting function.
